deploy: 124270f923abd9c688d408012f4cf808b22ee046

--- a/PVSStudioAnalysis/index.html
+++ b/PVSStudioAnalysis/index.html
@@ -8,7 +8,7 @@
    TABLE {
     width: 100%;
    }
-   #col_group, #col_level, #col_code, #col_cwe, #col_misra {
+   #col_group, #col_level, #col_code, #col_cwe, #col_sast {
     text-align: center;
     white-space: nowrap;
     width: 0;
@@ -36,8 +36,8 @@
   </div>
 
   <table cellpadding="0" cellspacing="0" border="0" class="infotopic">
-     <tr><th id="col_info">Date:</th><td>Mon Mar  8 19:00:11 2021</td></tr>
-     <tr><th id="col_info">PVS-Studio Version:</th><td>7.11.44204.104</td></tr>
+     <tr><th id="col_info">Date:</th><td>Thu Jun  3 19:15:02 2021</td></tr>
+     <tr><th id="col_info">PVS-Studio Version:</th><td>7.12.46137.116</td></tr>
      <tr><th id="col_info">Command Line:</th><td>plog-converter -a GA\:1,2 -t fullhtml -o ../website/build/QArchive/PVSStudioAnalysis project.log </td></tr>
      <tr><th id="col_info">Total Warnings (GA):</th><td>8</td></tr>
   </table>
