deploy: db6a2191fde47b17bb5e46674475031b23920596

--- a/PVSStudioAnalysis/sources/qarchivecompressor_p.cc_0.html
+++ b/PVSStudioAnalysis/sources/qarchivecompressor_p.cc_0.html
@@ -871,7 +871,7 @@
 <a name="ln858">}</a>
 
 </code></pre>
-<div class="balloon" rel="356"><p><span style="font-size:18px">&uarr;</span> <a href="https://www.viva64.com/en/w/v1048/" target="_blank">V1048</a> The 'b_Started' variable was assigned the same value.</p></div>
+<div class="balloon" rel="356"><p><span style="font-size:18px">&uarr;</span> <a href="https://pvs-studio.com/en/docs/warnings/v1048/" target="_blank">V1048</a> The 'b_Started' variable was assigned the same value.</p></div>
 
 <link rel="stylesheet" href="highlight.css">
 <script src="highlight.pack.js"></script>
