--- a/PVSStudioAnalysis/index.html
+++ b/PVSStudioAnalysis/index.html
@@ -36,8 +36,8 @@
   </div>
 
   <table cellpadding="0" cellspacing="0" border="0" class="infotopic">
-     <tr><th id="col_info">Date:</th><td>Mon Jun 21 11:06:08 2021</td></tr>
-     <tr><th id="col_info">PVS-Studio Version:</th><td>7.12.46137.116</td></tr>
+     <tr><th id="col_info">Date:</th><td>Mon Jul 12 07:43:21 2021</td></tr>
+     <tr><th id="col_info">PVS-Studio Version:</th><td>7.13.48133.129</td></tr>
      <tr><th id="col_info">Command Line:</th><td>plog-converter -a GA\:1,2 -t fullhtml -o ../website/build/QArchive/PVSStudioAnalysis project.log </td></tr>
      <tr><th id="col_info">Total Warnings (GA):</th><td>8</td></tr>
   </table>
@@ -53,56 +53,56 @@
       <td id="col_group">General Analysis</td>
       <td id="col_file"><a target="_blank" href="sources/qarchivecompressor_p.cc_0.html#ln356">qarchivecompressor_p.cc:356</a></td>
       <td id="col_level" style="color:#FFA500"><b>Medium</b></td>
-      <td id="col_code"><a target="_blank" href="https://www.viva64.com/en/w/v1048/">V1048</td>
+      <td id="col_code"><a target="_blank" href="https://pvs-studio.com/en/docs/warnings/v1048/">V1048</td>
       <td id="col_message">The 'b_Started' variable was assigned the same value.</td>
     </tr>
     <tr>
       <td id="col_group">General Analysis</td>
       <td id="col_file"><a target="_blank" href="sources/qarchiveextractor_p.cc_1.html#ln80">qarchiveextractor_p.cc:80</a></td>
       <td id="col_level" style="color:#FFA500"><b>Medium</b></td>
-      <td id="col_code"><a target="_blank" href="https://www.viva64.com/en/w/v1048/">V1048</td>
+      <td id="col_code"><a target="_blank" href="https://pvs-studio.com/en/docs/warnings/v1048/">V1048</td>
       <td id="col_message">The 'size' variable was assigned the same value.</td>
     </tr>
     <tr>
       <td id="col_group">General Analysis</td>
       <td id="col_file"><a target="_blank" href="sources/qarchiveextractor_p.cc_1.html#ln83">qarchiveextractor_p.cc:83</a></td>
       <td id="col_level" style="color:#FF0000"><b>High</b></td>
-      <td id="col_code"><a target="_blank" href="https://www.viva64.com/en/w/v570/">V570</td>
+      <td id="col_code"><a target="_blank" href="https://pvs-studio.com/en/docs/warnings/v570/">V570</td>
       <td id="col_message">The 'size' variable is assigned to itself.</td>
     </tr>
     <tr>
       <td id="col_group">General Analysis</td>
       <td id="col_file"><a target="_blank" href="sources/qarchiveextractor_p.cc_1.html#ln84">qarchiveextractor_p.cc:84</a></td>
       <td id="col_level" style="color:#FFA500"><b>Medium</b></td>
-      <td id="col_code"><a target="_blank" href="https://www.viva64.com/en/w/v560/">V560</td>
+      <td id="col_code"><a target="_blank" href="https://pvs-studio.com/en/docs/warnings/v560/">V560</td>
       <td id="col_message">A part of conditional expression is always true: size &gt;= 1024.</td>
     </tr>
     <tr>
       <td id="col_group">General Analysis</td>
       <td id="col_file"><a target="_blank" href="sources/qarchiveextractor_p.cc_1.html#ln87">qarchiveextractor_p.cc:87</a></td>
       <td id="col_level" style="color:#FFA500"><b>Medium</b></td>
-      <td id="col_code"><a target="_blank" href="https://www.viva64.com/en/w/v560/">V560</td>
+      <td id="col_code"><a target="_blank" href="https://pvs-studio.com/en/docs/warnings/v560/">V560</td>
       <td id="col_message">A part of conditional expression is always true: size &gt;= 1048576.</td>
     </tr>
     <tr>
       <td id="col_group">General Analysis</td>
       <td id="col_file"><a target="_blank" href="sources/qarchiveextractor_p.cc_1.html#ln287">qarchiveextractor_p.cc:287</a></td>
       <td id="col_level" style="color:#FFA500"><b>Medium</b></td>
-      <td id="col_code"><a target="_blank" href="https://www.viva64.com/en/w/v1048/">V1048</td>
+      <td id="col_code"><a target="_blank" href="https://pvs-studio.com/en/docs/warnings/v1048/">V1048</td>
       <td id="col_message">The 'b_Started' variable was assigned the same value.</td>
     </tr>
     <tr>
       <td id="col_group">General Analysis</td>
       <td id="col_file"><a target="_blank" href="sources/qarchiveutils_p.cc_2.html#ln123">qarchiveutils_p.cc:123</a></td>
       <td id="col_level" style="color:#FFA500"><b>Medium</b></td>
-      <td id="col_code"><a target="_blank" href="https://www.viva64.com/en/w/v522/">V522</td>
+      <td id="col_code"><a target="_blank" href="https://pvs-studio.com/en/docs/warnings/v522/">V522</td>
       <td id="col_message">There might be dereferencing of a potential null pointer 'p'. Check lines: 123, 122.</td>
     </tr>
     <tr>
       <td id="col_group">General Analysis</td>
       <td id="col_file"><a target="_blank" href="sources/qarchiveutils_p.cc_2.html#ln201">qarchiveutils_p.cc:201</a></td>
       <td id="col_level" style="color:#FFA500"><b>Medium</b></td>
-      <td id="col_code"><a target="_blank" href="https://www.viva64.com/en/w/v575/">V575</td>
+      <td id="col_code"><a target="_blank" href="https://pvs-studio.com/en/docs/warnings/v575/">V575</td>
       <td id="col_message">The potential null pointer is passed into 'strcpy' function. Inspect the first argument. Check lines: 201, 200.</td>
     </tr>
 
